# docs/openapi.json
@@ -722,6 +722,48 @@
                 }
             }
         },
+        "/domains/{domain}/dns/export": {
+            "get": {
+                "operationId": "dns.zone.controller.export",
+                "tags": [
+                    "Account"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response"
+                    },
+                    "422": {
+                        "$ref": "#/components/responses/ValidationError"
+                    }
+                }
+            }
+        },
+        "/domains/{domain}/dns/import": {
+            "post": {
+                "operationId": "dns.zone.controller.import",
+                "tags": [
+                    "Account"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response"
+                    },
+                    "422": {
+                        "$ref": "#/components/responses/ValidationError"
+                    }
+                }
+            }
+        },
         "/domains/{domain}/dns/reconcile": {
             "post": {
                 "operationId": "dns.deployment.controller.reconcile",
